--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  		<div class="container todo-caja">
 	 		<div class="row ">
 		 		<div class="col-md-offset-6 col-md-6 ">
-		 			<input type="text" class="input-box" placeholder="Ingresa la tarea">
+		 			<input type="text" id="tarea-input" class="input-box" placeholder="Ingresa la tarea">
 		 			<h6 class="titulo">To Do Items:</h6>
 		 			
 		 		</div>
