--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
 		 		</div>
 		 	</div>
 		 	<div class="row">
-		 		<div class="col-md-3">
+		 		<div class="col-md-3 caja">
 		 			<form action="#" class="tareas-nuevas">
-
+						<p>
+					      <input type="checkbox" id="test5" />
+					      <label for="test5">Tarea 1</label>
+					      <a href="" class="btn-basurero" type="button"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+					    </p>
 		 			</form>
+		 			<hr>
 		 		</div>
 		 		<div class="col-md-3 ">
 		 			<form action="#" class="tareas-completas">
@@ -39,6 +44,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+	<script src="https://use.fontawesome.com/be0dd1e218.js"></script>
 	<script src="assets/javascript/main.js"></script>
 </body>
 </html>
