--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		 		<div class="col-md-3 caja">
 		 			<form action="#" class="tareas-nuevas">
 						<p>
-					      <input type="checkbox" id="test5" />
+					      <input type="checkbox" id="test5" class="checkbox" />
 					      <label for="test5">Tarea 1</label>
 					      <a href="" class="btn-basurero" type="button"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
 					    </p>
