todas las tareas completadas se mueven

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 		 			<hr>
 		 		</div>
 		 		<div class="col-md-3 ">
-		 			<form action="#" class="tareas-completas">
+		 		<h6 class="titulo">Tareas completadas:</h6>
+		 			<ol class="tareas-completas">
 
-		 			</form>
+		 			</ol>
 		 		</div>
 		 	</div>
 		 </div>
